# Solana_Study

./: .gitignore  Anchor.toml  GGNN.py  GGNN_rev.py  GGNN_rev2.py  ast.json  ast.txt  ast3.json  ast_lib.json  ast_secure1.json  auto.py  auto_test.py  cfg.json  cfg3.json  cfg_secure1.json  combined_graph.json  diff.py  feature_extraction.py  find_from.py  fix_declare_id.py  generate_pdg.rs  joint_graph_generater.py  joint_graph_generater2.py  joint_graph_generater3.py  joint_graph_generater4.py  label_rev.py  modify_signer_to_accountinfo.py  multi_code_detect_original_latest2.py  multi_code_detect_original_latest3.py  pdg.json  pdg3.json  pdg_lib.json  pdg_secure1.json  rename.py  second_joint_graph_generater copy.py  second_joint_graph_generater.py  source_code_importer.py  third_joint_graph_generater.py  third_joint_graph_generater_copy.py  tokenize_ast.py  (+9 more)
programs/insecure_update_project2/: Cargo.toml
programs/insecure_update_project2/Project1/: ast_1.json  ast_2.json  cfg_1.json  multi_vul1.rs  pdg_1.json  pdg_2.json  token_graph.json  updated_token_graph3.json
programs/insecure_update_project2/Project2/: ast1.json  cfg1.json  pdg1.json  updated_joint_graph.json  vul1.rs  vul2.rs
programs/insecure_update_project2/Project3/: pdg1.json  vul1.rs
programs/insecure_update_project2/Project5/: vul1.rs
programs/insecure_update_project2/Project6/: vul1.rs
programs/insecure_update_project2/src/: ast_lib_token.json  ast_lib_token2.json  extract_ast_new.rs  extract_cfg.rs  extract_pdg.rs  joint_graph.json  joint_graph2.json  secure1.rs  vul3.rs
(+38007 files in other folders)
