[package]
name = "insecure_update_project2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "insecure_update_project2"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
serde_json = "1.0.133"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0.87", features = ["full", "visit"] }
petgraph = "0.6"
quote = "1.0"
proc-macro2 = "1.0"

[[bin]]
name = "extract_ast"
path = "src/extract_ast.rs"

[[bin]]
name = "extract_cfg"
path = "src/extract_cfg.rs"

[[bin]]
name = "extract_pdg"
path = "src/extract_pdg.rs"

[[bin]]
name = "extract_ast_new"
path = "src/extract_ast_new.rs"